# conan_template

./: CMakeLists.txt  README.md  conanfile.py  requirements.txt
profiles/: linux-latest-clang-debug  macos-14-armv8-apple_clang-15-release  macos-latest-clang-debug  macos-latest-clang-release  ubuntu-22.04-x86_64-clang-14-release  windows-2022-x86_64-clang-18-release  windows-latest-clang-debug
src/example_app/: CMakeLists.txt  main.cpp
